VISTA-75 add more memory